--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,9 +7,9 @@
     <body>
         <h1>Hello World!</h1>
         <h2>We are The Turtle Troopers! to view our team name and pictures visit our <a href="https://jesper3005.github.io/TTTAgenda/">page</a></h2>
-        <h3><a href="">Page 1 - Calculator</a></h3>
+        <h3><a href="https://dueinator.dk/calculator/calc.html">Page 1 - Calculator</a></h3>
         <h3><a href="https://dueinator.dk/calculator/calculator.html">Page 1 - Calculator API</a></h3>
-        <h3><a href="">Page 3 - Dynamic UI Manipulation</a></h3>
-        <h3><a href="">Page 4 - Dynamic UI manipulation with data obtained via fetch</a></h3>
+        <h3><a href="https://dueinator.dk/calculator/dynamic.html">Page 3 - Dynamic UI Manipulation</a></h3>
+        <h3><a href="https://dueinator.dk/calculator/dynamicData.html">Page 4 - Dynamic UI manipulation with data obtained via fetch</a></h3>
     </body>
 </html>
