--- a/src/main/webapp/calculator.html
+++ b/src/main/webapp/calculator.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>Calculator</title>
+        <title>Calculator API</title>
     </head>
     <body>
-        <h1>Hello Nerdz!</h1>
+        <h1><a href="https://dueinator.dk/calculator/">Press here to get back!</a></h1>
         <input type="number" id="firstNumber">
         <br>
         <input type="number" id="secondNumber">
