--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,20 @@
     </head>
     <body>
         <h1>Hello World!</h1>
-        <h2>We are The Turtle Troopers! to view our team name and pictures visit our <a href="https://jesper3005.github.io/TTTAgenda/">page</a></h2>
+        <h2><a href="https://jesper3005.github.io/TTTAgenda/">We are The Turtle Troopers!</a></h2>
+        <table>
+            <tr>
+                <td>Christian</td>
+                <td>Jesper</td>
+                <td>Michael</td>
+                <td>Mads</td>
+            </tr><tr>
+                <td><img src="Assets/Images/Christian.jpg" alt=""/></td>
+                <td><img src="Assets/Images/Jesper.jpg" alt=""/></td>
+                <td><img src="Assets/Images/Michael.jpg" alt=""/></td>
+                <td><img src="Assets/Images/Mads.jpg" alt=""/></td>
+            </tr>
+        </table>
         <h3><a href="https://dueinator.dk/calculator/calc.html">Page 1 - Calculator</a></h3>
         <h3><a href="https://dueinator.dk/calculator/calculator.html">Page 1 - Calculator API</a></h3>
         <h3><a href="https://dueinator.dk/calculator/dynamic.html">Page 3 - Dynamic UI Manipulation</a></h3>
