--- a/src/main/webapp/dynamic.html
+++ b/src/main/webapp/dynamic.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
 <html>
+
     <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Page Title</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="Assets/CSS/Page3Style.css" rel="stylesheet" type="text/css"/>
     </head>
+
     <body>
         <h1><a href="https://dueinator.dk/calculator/">Press here to get back!</a></h1>
+        <div class="container">
+            <h2>DOM manipulation via plain JavaScript</h2>
+            <h3>And getting used to the JavaScript Array</h3>
+            <div class='inputs'>
+                <input id="newboy" placeholder='Add boy' />
+                <button onclick="addBoy()" id='addboy'>Add Boy</button>
+                <input id="newgirl" placeholder='Add girl' />
+                <button onclick="addGirl()" id='addgirl'>Add Girl</button>
+            </div>
+            <div class='inputs'>
+                <button onclick="removeBoy()" id='removeboy'>Remove boy</button>
+                <button onclick="removeGirl()" id='removegirl'>Remove girl</button>
+                <Input type='radio' name='direction' id='first' /> Remove first
+                <Input type='radio' name='direction' id='last' /> Remove last
+                <button onclick="reverseAll()" id='reverse'>Reverse all</button>
+                <button onclick="sortAll()" id='sort'>Sort all</button>
+            </div>
+            <div class="lists">
+                <h4>Boys</h4>
+                <div id="boys"></div>
+            </div>
+            <div class="lists">
+                <h4 style="text-align: center">Girls</h4>
+                <div class="names" id="girls"></div>
+            </div>
+            <div class="lists">
+                <h4>All</h4>
+                <div id="all"></div>
+            </div>
+        </div>
+        <script src="Assets/JS/page3script.js" type="text/javascript"></script>
+
     </body>
+
 </html>
+
